[package]
name = "webauthn-authenticator-rs"
version = "0.1.2"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2018"
license = "MPL-2.0"
description = "Webauthn Authenticator Client Library"
# documentation = "https://docs.rs/kanidm/latest/kanidm/"
homepage = "https://github.com/kanidm/webauthn-authenticator-rs/"
repository = "https://github.com/kanidm/webauthn-authenticator-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
authenticator = "0.3"
webauthn-rs = "^0.2.5"
# { path = "../webauthn-rs" }
url = { version = "2.1.1" }
serde_json = "1.0"
nom = "4.2"
serde_cbor = "0.11"
openssl = "0.10"

[dev-dependencies]
env_logger = "0.7"
base64 = "0.12"
