[package]
name = "webauthn-authenticator-rs"
version = "0.3.0-alpha.6"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2018"
license = "MPL-2.0"
description = "Webauthn Authenticator Client Library"
# documentation = "https://docs.rs/kanidm/latest/kanidm/"
homepage = "https://github.com/kanidm/webauthn-authenticator-rs/"
repository = "https://github.com/kanidm/webauthn-authenticator-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
u2fhid = ["authenticator"]
default = ["u2fhid"]

[dependencies]
webauthn-rs = { version = "0.3.0-alpha.5" }
# webauthn-rs = { path = "../webauthn-rs" }

log = "0.4"
url = { version = "2.1.1" }
serde_json = "1.0"
nom = "6.1"
serde_cbor = "0.11"
openssl = "0.10"

authenticator = { version = "0.3", optional = true }

[dev-dependencies]
env_logger = "0.8"
base64 = "0.13"
